--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "recharts": "^3.5.1",
     "xlsx": "^0.18.5",
     "uuid": "^13.0.0"
+    "firebase": "^10.7.1",
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
